Add runimage with jlink